CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_NAME "main")
PROJECT(${PROJECT_NAME} CXX)

# 注意这里变成 RUNTIME 了
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})

LINK_DIRECTORIES("${CMAKE_SOURCE_DIR}/libs")

# 下面这句不能写，写了就编译不过了。但是不写的话，rpath 就会被 CMake 设置，加上了一个路径
# 我水平有限，不知道怎么解决或者解释，暂且这样吧
#SET(CMAKE_SKIP_BUILD_RPATH TRUE)
# 注意这里变成 EXE 了
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath,./:./libs")

AUX_SOURCE_DIRECTORY(./ SRC_LIST)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ulayer)